--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
         </div>
 
-        <div class="arrow">
+        <div class="arrow scroll">
             <img src="images/block_5_arrow.png" alt="arrow">
         </div>
 
@@ -199,7 +199,7 @@
             </div>
         </div>
 
-        <div class="arrow">
+        <div class="arrow scroll">
             <img src="images/block_5_arrow.png" alt="arrow">
         </div>
 
